fix-bug scrollbar

--- a/src/Components/CheckoutSideMenu/styles.css
+++ b/src/Components/CheckoutSideMenu/styles.css
@@ -1,4 +1,11 @@
-.product-detail{
-    width: 420px;
-    height: calc(100vh - 112px);
+.product-detail {
+  width: 420px;
+  height: calc(100vh - 112px);
+}
+
+.contentOrder {
+  overflow: auto;
+}
+.contentOrder::-webkit-scrollbar {
+  display: none;
 }
